static/css/style.css
/************BODY SETTINGS **************************************/

html {
    height: 100%;
    padding: 0;
    margin: 0;
}

body {
    position: relative;
    height: 100%;
    padding: 0;
    font-family: 'Abel', serif;
    font-size: 16.5px;
    background-image: url(../images/base_01.jpg);
    background-size: cover;
    background-attachment: fixed;
    text-align: center;
    z-index: 1;
}

/************CONTROL BRAND LOGO TEXT SIZE ON MOBILE **************************************/

@media screen and (max-width: 766px) {
    nav .brand-logo {
        font-size: 1.2rem;
        margin-left: 70px;
    }
}


@media screen and (min-width: 767px) {
    nav .brand-logo {
        margin-left: 120px;
    }
}


@media screen and (min-width: 993px) {
    nav .brand-logo {
        margin-left:0px;
    }
}

@media only screen and (max-width: 600px) {
    .img {
        margin-bottom: 40px;
    }
}

/************SIDE NAV ON MOBILE **************************************/

.side-nav {
    background-color: #26a69a;
}

.side-nav li>a {
    color: #FFF;
}


/************FLASH MESSAGE**************************************/

.flash {
    color: #FFF;
    font-size: 20px;
}


/************STYLING HOMEPAGE *****************************************************/

nav .brand-logo {
    padding-left: 20px;
    float: left;
    position: static;
}

nav ul a {
    font-size: 1.2rem;
    padding-right: 20px;
}


.register-text {
    margin-bottom: 40px;
    color: #FFF;
    font-size: 2rem;
}

.profile-text {
     margin-bottom: 110px;
     color: #FFF;
     font-size: 2rem;
}


/************FILTERED RESULTS *****************************************************/

.search-btn {
    margin-bottom: 20px;
}



/************STYLING RECIPE PAGE *****************************************************/

.collapsible-header {
    background-color: transparent;
    color: #000;
    border: 0;
}


.display_recipe {
    display: flex;
    flex-wrap: wrap;
}

.found_image {
    height: 200px;
    width: 100%;
    border-radius: 10px;

}

.single-recipe-result {
    padding: 10px;
    display: flex;
}

.inner_recipe_box {
    flex: 1;
    width: 100%;
    padding: 15px;
    border-radius: 10px;
}

.name_box {
    height: auto;
}

.des_box {
    min-height: 50px;
}

.cuisine_box {
    min-height: 50px;
}


.recipe-buttons {
    text-align: center;
}


.recipe-heading {
    color: #000;
    font-size: 30px;
    font-weight: bolder;
    text-align: center;
}

.btn_small {
    height: 24px;
    width: 60px;
    line-height: 24px;
    margin: 5px 5px;
    padding: 0 0.5em;
}

.recipe_header {
    margin-top: 5px;
    color: #000;
}


/**************************SINGLE PAGE RECIPE ******************************************************/

@media only screen and (min-width: 993px) {
    .container {
        width: 85%;
    }
}

.search-container {
    width: 70%;
    display: inline-block;
}

.search-text {
    font-size: 18px;
    text-align: center;
    font-weight: bold;
}

.recipe-container {
    background-color: rgba(255, 255, 255, .8);
    padding: 20px;
    margin-top: 20px;
    margin-bottom: 50px;
    border-radius: 10px;
}

.single-recipe-head {
    padding: 15px 40px;
}

.recipe_image_container {
    margin-left: -5px;
    margin-right: -5px;
}


.img {
    height: auto;
    width: 100%;
    border-radius: 10px;
    margin-right: 15px;
    float: left;

}

.single-recipe-ingredients {
    background-color: rgba(255, 255, 255, .7);
    border-radius: 10px;
    margin-bottom: 20px;
    padding-top: 15px;
    padding-bottom: 10px;
}

.search-category-heading {
    padding: 5px 5px;
    border-bottom: 1px solid #000;
    margin-bottom: 15px;
}

.flex1 {
    flex: 1;
}

.flex-box {
    display: flex;
}

.search-ingredient {
    width: 150px;
}

.sort-text {
    font-size: 10px;
}

.cuisine-item {
    display: inline-block;
    background-color: #26a69a;
    border-radius: 20px;
    padding: 2.5px 7px;
    font-weight: bold;
}


.recipe-count {
    text-align: center;
}


.recipe-spacing {
    padding-top: 20px;
}

.ingredient-text {
    text-align: justify;
    padding-right: 20px;
    margin-left: 20px;
}

.description-text {
    text-align: center;
    padding-right: 40px;
    padding-left: 40px;
}

/* color of text for the 'search ingredients' input box overwrite default materialize grey*/

input::-webkit-input-placeholder {
    color: black !important;
}

/* label focus color */

.input-field label {
    color: #000;
}



.instruction-text {
    text-align: justify;
    padding-right: 20px;
}

.ingredients-title {
    padding-top: 80px;
}

.instructions-title {
    padding-top: 50px;
    text-align: center;
}

.like-icon {
    padding-bottom: 20px;
}

.page-footer {
    padding-top: 0px;
    background-color: #26a69a;
    width: 100%;
    position: fixed;
    bottom: 0;
    left: 0;
    right: 0;
    text-align: center;
    z-index: 2;
}

